# wyoming-onnx-asr

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.gpu  LICENSE.md  README.md  compose.gpu-trt.yaml  compose.gpu.yaml  compose.yaml  gpu-tensorrt.Dockerfile  gpu.Dockerfile  mise.toml  pyproject.toml
.github/workflows/: docker-publish-gpu  docker-publish-gpu-tensorrt.yml  docker-publish-gpu.yml  docker-publish.yml  test.yml
script/: format  lint
tests/: test_dual_model.py  test_faster_whisper.py
tools/: WyomingASRBenchmark.py  asr_client.py
wyoming_nemo_asr/: __init__.py  __main__.py  handler.py
wyoming_onnx_asr/: __init__.py  __main__.py  handler.py
