[project]
name = "wyoming-onnx-asr"
version = "0.1.0"
description = "Wyoming Server for ONNX ASR"
readme = "README.md"
requires-python = ">=3.10.0,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Thomas Boby"}
]
keywords = ["rhasspy", "wyoming", "onnx", "asr", "stt", "nemo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "wyoming>=1.5.3",
    "onnx-asr[hub]>=0.6",
    "soundfile>=0.12.1",
]

[project.urls]
Homepage = "http://github.com/tboby/wyoming-onnx-asr"

[tool.setuptools]
platforms = ["any"]
zip-safe  = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["wyoming_onnx_asr"]
exclude = ["tests"]

[project.scripts]
wyoming-nemo-asr = "wyoming_onnx_asr.__main__:run"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "mypy>=0.991",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3"
]
[tool.uv.sources]
tensorrt_libs = { index = "nvidia" }

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[project.optional-dependencies]
cpu = ["onnx-asr[cpu]>=0.6"]
gpu = ["onnx-asr[gpu]>=0.6"]
gpu-preload = ["onnxruntime-gpu[cuda,cudnn]>=1.15.0", "onnx-asr[gpu]>=0.6", "tensorrt-libs"]
